# vapoursynth-julek-plugin

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
msvc_project/: julek.sln  julek.vcxproj  julek.vcxproj.filters
src/: AGM.cpp  AutoGain.cpp  Butteraugli.cpp  ColorMap.cpp  RFS.cpp  VisualizeDiffs.cpp  shared.cpp  shared.h  ssimulacra.cpp
src/AVX2/: AGM_AVX2.cpp  AutoGain_AVX2.cpp
